Host, DB added.2

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <script>
+    window.__API_URL__ = window.__API_URL__ || 'https://desafio-final-vert.vercel.app/';
+  </script>
   <app-root></app-root>
 </body>
 </html>
