--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,20 @@
 </head>
 <body>
   <script>
-    window.__API_URL__ = window.__API_URL__ || 'https://desafio-final-vert.vercel.app/';
+    (function() {
+      try {
+        var params = new URLSearchParams(window.location.search);
+        var fromQuery = params.get('api');
+        var stored = localStorage.getItem('API_URL');
+        if (fromQuery) {
+          localStorage.setItem('API_URL', fromQuery);
+        }
+        window.__API_URL__ = (fromQuery || stored || window.__API_URL__ || 'https://desafio-final-vert.vercel.app');
+      } catch (e) {
+        window.__API_URL__ = window.__API_URL__ || 'https://desafio-final-vert.vercel.app';
+      }
+    })();
   </script>
   <app-root></app-root>
 </body>
 </html>
-
