--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
         if (fromQuery) {
           localStorage.setItem('API_URL', fromQuery);
         }
-        window.__API_URL__ = (fromQuery || stored || window.__API_URL__ || 'https://desafio-final-vert.vercel.app');
+        window.__API_URL__ = (fromQuery || stored || window.__API_URL__ || 'https://desafio-final-8yl4c5jpi-ledujunior-4293s-projects.vercel.app');
       } catch (e) {
-        window.__API_URL__ = window.__API_URL__ || 'https://desafio-final-vert.vercel.app';
+        window.__API_URL__ = window.__API_URL__ || 'https://desafio-final-8yl4c5jpi-ledujunior-4293s-projects.vercel.app';
       }
     })();
   </script>
